JumpScript/tests/baselines/reference/importWithTrailingSlash_noResolve.errors.txt
/a.jump(1,17): error TS2307: Cannot find module './foo/'.


==== /a.jump (1 errors) ====
    import foo from "./foo/";
                    ~~~~~~~~
!!! error TS2307: Cannot find module './foo/'.
    